# Aspose.Email-for-C

./: .gitignore  README.md
Examples/AsposeEmailConvertor/: AsposeEmailConvertorConfig.cmake  CMakeLists.txt  README.md  build_x64_MinSizeRel.bat  build_x64_debug.bat  build_x64_release.bat
Examples/AsposeEmailConvertor/TestApp/: CMakeLists.txt  README.md
Examples/AsposeEmailConvertor/src/: AsposeEmailConvertor.cpp
Examples/AsposeEmailConvertor/tests/: build_x64_release.bat  testapp.cpp
Examples/Cpp/: CMakeLists.txt  Cpp.vcxproj  build_x64_debug.bat  build_x64_release.bat  build_x86_debug.bat  build_x86_release.bat  linux_build_clang.sh  linux_build_gcc.sh  packages.config  windows_build.bat
Examples/Cpp/cmake/: AsposeNatvis.cmake  OptionsCommon.cmake  PrecompiledHeader.cmake  SetLibraryOutputDir.cmake  SetLibraryOutputName.cmake  cotire.cmake
Examples/Cpp/natvis/: aspose_types.natvis
Examples/Cpp/pch/: aspose_pch.cpp  aspose_pch.h
Examples/Cpp/source/: Examples.cpp  Examples.h
Examples/Cpp/source/Email/: AddAttachment.cpp  AddEmailAttachments.cpp  AddNewTNEFAttachments.cpp  BayesianSpamAnalyzer.cpp  ChangeEmailAddress.cpp  CheckBouncedMessage.cpp  ConvertMHTMLWithOptionalSettings.cpp  CreateNewEmail.cpp  CreateNewMailMessage.cpp  CreateTNEFEMLFromMSG.cpp  CreatingTNEFFromMSG.cpp  DetectDifferentFileFormats.cpp  DetectMessageIsTNEF.cpp  DetectTNEFMessage.cpp  DetermineAttachmentEmbeddedMessage.cpp  DisplayAttachmentFileName.cpp  DisplayEmailAddressesNames.cpp  DisplayEmailInformation.cpp  DraftAppointmentRequest.cpp  EmbeddedObjects.cpp  ExportEmailToEML.cpp  ExportEmailToMHTWithCustomTimezone.cpp  ExtractAttachments.cpp  ExtractEmbeddedObjects.cpp  ExtractEmbeddedObjectsFromEmail.cpp  ExtractMSGEmbeddedAttachment.cpp  ExtractingEmailHeaders.cpp  GetDecodedHeaderValues.cpp  GetDeliveryStatusNotificationMessages.cpp  IdentifyInlineAndRegularAttachments.cpp  LoadAndSaveFileAsEML.cpp  LoadMessageWithLoadOptions.cpp  LoadingEMLAndSavingToMSG.cpp  PreserveEmbeddedMSGFormatDuringLoad.cpp  PreserveOriginalBoundaries.cpp  PreserveTNEFAttachment.cpp  PreservingEmbeddedMsgFormat.cpp  ProcessBouncedMsgs.cpp  ReadMessageByPreservingTNEFAttachments.cpp  ReadMultilpleEventsFromICS.cpp  (+15 more)
Examples/Cpp/source/Exchange_EWS/: AccessAnotherMailboxUsingExchangeWebServiceClient.cpp  AccessCustomFolderUsingExchangeWebServiceClient.cpp  AddContactsToExchangeServerUsingEWS.cpp  AddMembersToPrivateDistributionList.cpp  AddMembersWithoutListing.cpp  AddingHeadersToEWSRequests.cpp  AdvancedSyntaxQueryBuilderUsingEWS.cpp  AutoDiscoverUsingEWS.cpp  CaseSensitiveEmailsFilteringUsingEWS.cpp  ConnectingToExchangeServerUsingEWS.cpp  CopyConversations.cpp  CopyingMessageToAnotherFolder.cpp  CreatUserConfigurations.cpp  CreateAndSendingMessageWithVotingOptions.cpp  CreateFoldersOnExchangeServerMailbox.cpp  CreateNewRuleOntheExchangeServer.cpp  CreatePrivateDistributionList.cpp  CreateREAndFWMessages.cpp  CreatingUpdatingAndDeletingCalendarItemsUsingEWS.cpp  DeleteContactsFromExchangeServerUsingEWS.cpp  DeleteConversations.cpp  DeleteExchangeTask.cpp  DeleteMembersFromPrivateDistributionList.cpp  DeleteMembersWithoutListing.cpp  DeleteMessagesFromUsingEWS.cpp  DeletePrivateDistributionList.cpp  DeleteTaskOnExchange.cpp  DeleteUserConfiguration.cpp  DeleteWithoutListing.cpp  DownloadMessagesFromPublicFolders.cpp  EnumeratMessagesWithPaginginEWS.cpp  ExchangeConnectHelper.cpp  ExchangeFoldersBackupToPST.cpp  ExchangeServerReadRules.cpp  ExchangeTestUser.h  ExpandPublicDistributionList.cpp  FetchContactUsingId.cpp  FetchMessageUsingEWS.cpp  FetchPrivateDistributionList.cpp  FilterAppointmentsUsingEWS.cpp  (+45 more)
Examples/Cpp/source/Exchange_Graph/: ListFoldersExhangeGraph.cpp
Examples/Cpp/source/Gmail/: AccessClientSettings.cpp  AccessColorInfo.cpp  AccessGmailContacts.cpp  AddingAnAppointment.cpp  CreateGmailContact.cpp  DeleteGmailContact.cpp  DeleteParticularCalendar.cpp  GoogleOAuthHelper.cpp  GoogleOAuthHelper.h  GoogleTestUser.cpp  GoogleTestUser.h  InsertFetchAndUpdateCalendar.cpp  ManageAccessRule.cpp  MoveAndDeleteAppointment.cpp  QueryingCalendar.cpp  RetrieveUpdateAppointment.cpp  SavingContact.cpp  TestUser.cpp  TestUser.h  UpdateGmailContact.cpp
Examples/Cpp/source/IMAP/: AddingNewMessage.cpp  BuildingComplexQueries.cpp  CaseSensitiveEmailsFiltering.cpp  ConnectingWithIMAPServer.cpp  CopyMultipleMessagesFromOneFoldertoAnother.cpp  DeleteMultipleMessages.cpp  DeleteSingleMessage.cpp  DeletingAndRenamingFolders.cpp  DeletingFolders.cpp  EmailThreading.cpp  FetchEmailMessagesFromIMAPServer.cpp  FilteringMessagesFromIMAPMailbox.cpp  GetMessageIdUsingImapMessageInfo.cpp  GetMessagesWithSpecificCriteria.cpp  GettingFoldersInformation.cpp  IMAP4ExtendedListCommand.cpp  IMAP4IDExtensionSupport.cpp  ImapClientActivityLogging.cpp  InsertHeaderAtSpecificLocation.cpp  InternalDateFilter.cpp  (+22 more)
Examples/MinimalCppExample/: CMakeLists.txt  Example.cpp  MinimalCppExample.vcxproj  MinimalCppExample.vcxproj.filters  build_x64_debug.bat  build_x64_release.bat  build_x86_debug.bat  build_x86_release.bat  linux_build.sh  linux_build_clang.sh  linux_build_gcc.sh  packages.config  windows_build.bat
Examples/MinimalCppExample/natvis/: aspose_types.natvis
Examples/NodeJsAddon/: .npmignore  CMakeLists.txt  README.md  package-lock.json  package.json  test.js
Examples/NodeJsAddon/src/: AsposeEmailConvertor.h  NodeJSWrapper.cpp  addon.cc
Examples/NodeJsExample/: .gitignore  CMakeLists.txt  package-lock.json  package.json  readme.md
Examples/NodeJsExample/src/: AsposeEmailConvertor.cpp  greeting.cpp  greeting.hpp  index.cpp
Examples/NodeJsExample/tests/: runAddon.js
Examples/PhpExample/AsposeEmailExtension/: AsposeEmailConvetor.h  AsposeEmailExtension.cpp  CMakeLists.txt  Readme.md  build_windows_x64.bat
Examples/QtExample/: CMakeLists.txt  build.bat  main.cpp
Examples/QtSample/: AsposeEmailConvertor.cpp  CMakeLists.txt  main.cpp  windows_build.bat
Examples/RustExample/: CMakeLists.txt  Cargo.toml  README.md  build.bat
Examples/RustExample/src/: main.rs
Examples/RustExample/src_cpp/: RustWrapper.cpp
(+217 files in other folders)
